refactor!: rename packages, coordinates, config keys → Token-Sheriff (atomic)
Plan 01 mechanical rename. Atomic by necessity — packages, Maven coordinates
and config/metric keys must flip together to keep the build green.

OpenRewrite (rewrite.yml, recipe de.cuioss.sheriff.token.MigrateFromOAuthSheriff):
- ChangePackage de.cuioss.sheriff.oauth.core → .token.validation (core = the
  validation capability) and de.cuioss.sheriff.oauth → .token (everything else)
- ChangeType for the 9 OAuthSheriff* types → TokenSheriff*

Scoped text edits:
- Maven groupId de.cuioss.sheriff.oauth → de.cuioss.sheriff.token; artifactIds
  oauth-sheriff-core → token-sheriff-validation, -quarkus → -validation-quarkus,
  -quarkus-deployment → -validation-quarkus-deployment, parent/integration-tests/
  bom kept neutral (token-sheriff-*)
- Module directories renamed to match artifactIds
- Config + metric key prefix sheriff.oauth → sheriff.token (JwtPropertyKeys,
  MetricIdentifier, BenchmarkConstants, application*.properties, tests)
- Log PREFIX constants + doc log IDs flipped together: OAuthSheriff → TokenSheriff,
  OAuthSheriff_Q → TokenSheriff_Q, OAuthSheriff_Q_D → TokenSheriff_Q_D
- Quarkus feature "oauth-sheriff" → "token-sheriff", extension metadata name,
  Playwright Dev-UI selectors, integration-test app/container name, cert O field
- Slash-form path refs (jar generators <include>, doc file links)
- Fixed pre-existing doc bug: keycloak claimSubOptional warning is 131, not 134

Deliberately preserved for Phase 3 (would break before the repo rename):
GitHub repo URLs (cuioss/OAuthSheriff), GitHub Pages URLs, SonarCloud key.
Recorded JMH result fixtures (library-benchmark-results) left pristine — they
capture historical machine paths, not source coordinates.

Incidental: the -Ppre-commit OpenRewrite recipes applied test-code
simplifications (Collections.emptySet() → Set.of() etc.) across ~33 test files.

Build green: ./mvnw -Ppre-commit clean verify and ./mvnw clean install.

Co-Authored-B